# minimalPythonBindingWithSip

./: .gitignore  hello.py  helloSip.sip  project.py  pyproject.toml  readme.md
src/: helloSip.cpp  helloSip.h  main.cpp  test
