# Specify sip v5 as the build system for the package.
[build-system]
requires = ["sip >=5, <6"]
build-backend = "sipbuild.api"

# Specify the PEP 566 metadata for the project.
[tool.sip.metadata]
name = "helloSip"
author="Rodrigo Janz"

# Configure the building of the helloSip bindings.
[tool.sip.bindings.helloSip]
headers = ["helloSip.h"]
include-dirs = ["src/"]
libraries = ["helloSip"]
library-dirs = ["src/build/"]

# Custom options defined the project.py file
[tool.sip.project]
hello-sip-include-dir = "src/"
hello-sip-library-dir = "src/build/"